2008-07-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* docs/manual/basics-bus.xml:
	Correct typo. Fixes bug #544320.

2008-07-22  Michael Smith <msmith@songbirdnest.com>

	* configure.ac:
	  Remove AC_ISC_POSIX macro; it's broken on some platforms and not needed.
	  Add check (taken from -base) for winsock, adds WIN32_LIBS
	* gst/Makefile.am:
	  Add WIN32_LIBS to LIBADD for libgstreamer. Needed now that gstpoll uses
	  winsock.
	  Define GST_EXPORTS when building libgstreamer (only used on win32)
	* gst/gst_private.h:
	* gst/gstinfo.h:
	  Use GST_EXPORT instead of locally-defined (and incorrect IMPORT_SYMBOL)
	  for symbols that we need to export in both these files.
	* gst/gstpoll.c:
	  Include gst_private.h higher up to avoid some compile problems on win32.

2008-07-22  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstvalue.c:
	Fix typos.

2008-07-22  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstcaps.c:
	Previous commit was wrong NULL caps does not exist
	and indicate an error, so also add a FIXME to
	gst_caps_is_equal where NULL caps are accepted.

2008-07-22  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstcaps.c:
	Allow passing of NULL to gst_caps_union

2008-07-21  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/gstghostpad.c:
	Add in doc that gst_ghost_pad_set_target can accept
	NULL to clear target

2008-07-15  Michael Smith <msmith@songbirdnest.com>

	* gst/gstplugin.c:
	* gst/gstregistry.c:
	  GstRegistryPool doesn't exist; don't refer to it in docs.
	  Don't refer to functions that don't exist in docs, it's
	  unhelpful.

2008-07-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gst.c:
	Fix scanning of paths given via --gst-plugin-path. Fixes bug #542175.

2008-07-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: tmatth <le dot businessman at gmail dot com>

	* docs/pwg/building-testapp.xml:
	Don't use an undeclared variable in the example program.
	Fixes bug #542573.
